<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/addReminderTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/splash_bg_grad"
        android:fontFamily="@font/roboto_bold"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:text="@string/reminder_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

    <ScrollView
        android:id="@+id/ScrollViewMedicationAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/addReminderTitleTextView">

        <RelativeLayout
            android:id="@+id/addTotalRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/reminderTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/roboto"
                android:maxLines="2"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_1sdp"
                android:text="@string/title"
                android:textColor="@color/oil"
                android:textSize="@dimen/_13sdp" />


            <EditText
                android:id="@+id/reminderTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/reminderTitleTextView"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rounded_corner_rect_reg"
                android:fontFamily="@font/roboto"
                android:gravity="top|start"
                android:hint="@null"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:scrollbars="vertical"
                android:textColor="@color/oil"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textSize="@dimen/_12sdp"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/reminderAboutTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reminderTitleEditText"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/roboto"
                android:maxLines="2"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_1sdp"
                android:text="@string/abt_reminder"
                android:textColor="@color/oil"
                android:textSize="@dimen/_13sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminderAboutTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reminderAboutTitleTextView"
                app:counterMaxLength="500"
                app:counterTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/reminderAboutEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@drawable/rounded_corner_rect_reg"
                    android:fontFamily="@font/roboto"
                    android:gravity="top|start"
                    android:hint="@null"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="500"
                    android:maxLines="10"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:scrollbars="vertical"
                    android:textColor="@color/oil"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/reminderDateTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reminderAboutTextInputLayout"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/roboto"
                android:maxLines="2"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_1sdp"
                android:text="@string/reminder_date"
                android:textColor="@color/oil"
                android:textSize="@dimen/_13sdp" />


            <TextView
                android:id="@+id/reminderDateTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/reminderDateTitleTextView"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rounded_corner_rect_reg"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/oil"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/reminderTimeTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reminderDateTextView"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/roboto"
                android:maxLines="2"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_1sdp"
                android:text="@string/reminder_time"
                android:textColor="@color/oil"
                android:textSize="@dimen/_13sdp" />


            <TextView
                android:id="@+id/reminderTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/reminderTimeTitleTextView"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rounded_corner_rect_reg"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/oil"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/reminderAlertTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reminderTimeTextView"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/roboto"
                android:maxLines="2"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_1sdp"
                android:text="@string/alert_before"
                android:textColor="@color/oil"
                android:textSize="@dimen/_13sdp" />


            <EditText
                android:id="@+id/reminderAlertEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/reminderAlertTitleTextView"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rounded_corner_rect_reg"
                android:fontFamily="@font/roboto"
                android:gravity="top|start"
                android:hint="@null"
                android:inputType="number"
                android:maxLength="2"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:scrollbars="vertical"
                android:textColor="@color/oil"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textSize="@dimen/_13sdp"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reminderAlertEditText"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/reminderDoneTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_rect_solid"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/reminderCancelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_rect_reg_red"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/color_red"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>