<!--
  ~ Copyright 2019 ~ https://github.com/braver-tool
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_8sdp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_1sdp">

                <TextView
                    android:id="@+id/myReminderTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/round_corner_curved_grey"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_3sdp"
                    android:text="@string/sample_time"
                    android:textAlignment="center"
                    android:textColor="@color/jet"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/reminderTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/reminder_title_"
                    android:textColor="@color/jet"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/reminderTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/grey_six"
                    android:textSize="@dimen/_13sdp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/abt_reminder"
                    android:textColor="@color/jet"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/aboutReminderTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto"
                    android:maxLines="3"
                    android:textColor="@color/grey_six"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="#999999"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/editReminderImageView"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_weight="1"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ic_edit_red" />

                <ImageView
                    android:id="@+id/deleteReminderImageView"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_weight="1"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ic_delete_red" />

                <ImageView
                    android:id="@+id/addToFavReminderImageView"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_weight="1"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ic_favorite_border_red" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>